<resources>
    <string name="app_name">Carrinhos</string>
    <string name="app_label">Carrinhos Fireroom</string>

    <!--<editor-fold desc="Activity Main">-->
    <string name="activity_main_label">Carrinhos</string>
    <string name="navigation_drawer_open">Abrir menu lateral</string>
    <string name="navigation_drawer_close">Fechar menu lateral</string>
    <string name="action_settings">Configurações</string>
    <!--</editor-fold>-->

    <!--<editor-fold desc="Menu da Navigation Drawer">-->
    <string name="activity_main_drawer_menu_inicio">Início</string>
    <string name="activity_main_drawer_menu_vendas">Vendas</string>
    <string name="activity_main_drawer_menu_produtos">Produtos</string>
    <string name="activity_main_drawer_menu_vendedores">Vendedores</string>
    <string name="activity_main_drawer_menu_relatorios">Relatórios</string>
    <string name="activity_main_drawer_menu_aplicativo">Aplicativo</string>
    <string name="activity_main_drawer_menu_atualizar">Atualizar</string>
    <string name="activity_main_drawer_menu_backup">Backup</string>
    <string name="activity_main_drawer_menu_sobre">Sobre</string>
    <!--</editor-fold>-->

    <!--<editor-fold desc="Fragment Início">-->
    <string name="frag_inicio_vendas_abertas">Vendas abertas</string>
    <string name="frag_inicio_total_hoje">Total hoje</string>
    <string name="frag_inicio_total_vendido">Total vendido:</string>
    <string name="frag_inicio_total_pago">Total pago:</string>
    <string name="frag_inicio_total_comissao">Total comissão:</string>
    <string name="frag_inicio_total_semana">Total na semana</string>
    <string name="frag_inicio_total_mes">Total no mês</string>
    <string name="frag_inicio_vendedor_semana">TOP vendedor da semana</string>
    <string name="frag_inicio_vendedor_mes">TOP vendedor do mês</string>
    <!--</editor-fold>-->

    <!--<editor-fold desc="Fragment Lista de Produtos">-->
    <string name="fragment_produto_lista_carregando_produtos">Carregando produtos…</string>
    <string name="fragment_produto_lista_vazia">Nenhum produto adicionado</string>
    <!--</editor-fold>-->

    <!--Activity Produto-->
    <string name="activity_produto_label">Produto</string>

    <!--<editor-fold desc="Fragment Cadastro de Produto">-->
    <string name="fragment_cadastro_produto_label_codigo">Código</string>
    <string name="fragment_cadastro_produto_label_nome">Nome do produto</string>
    <string name="fragment_cadastro_produto_label_sigla">Sigla</string>
    <string name="fragment_cadastro_produto_label_preco">Preço</string>
    <string name="fragment_cadastro_produto_label_habilitado">Habilitado</string>
    <string name="fragment_cadastro_produto_label_desabilitado">Desabilitado</string>
    <string name="fragment_cadastro_produto_label_botao_salvar">Salvar</string>
    <string name="fragment_cadastro_produto_label_botao_excluir">Excluir produto</string>
    <!--</editor-fold>-->

    <!--<editor-fold desc="Fragment Lista de Vendedors">-->
    <string name="fragment_vendedor_lista_carregando_vendedores">Carregando vendedores…</string>
    <string name="fragment_vendedor_lista_vazia">Nenhum vendedor adicionado</string>
    <!--</editor-fold>-->

    <!--Activity Vendedor-->
    <string name="activity_vendedor_label">Vendedor</string>

    <!--<editor-fold desc="Fragment Cadastro de Vendedor">-->
    <string name="fragment_cadastro_vendedor_label_codigo">Código</string>
    <string name="fragment_cadastro_vendedor_label_nome">Nome do vendedor</string>
    <string name="fragment_cadastro_vendedor_label_comissao">Comissão (%)</string>
    <string name="fragment_cadastro_vendedor_label_habilitado">Habilitado</string>
    <string name="fragment_cadastro_vendedor_label_desabilitado">Desabilitado</string>
    <string name="fragment_cadastro_vendedor_label_botao_salvar">Salvar</string>
    <string name="fragment_cadastro_vendedor_label_botao_excluir">Excluir vendedor</string>
    <!--</editor-fold>-->

    <!--<editor-fold desc="Fragment Lista de Vendas">-->
    <string name="fragment_venda_lista_carregando_vendas">Carregando vendas…</string>
    <string name="fragment_venda_lista_vazia">Nenhum venda adicionada</string>
    <string-array name="frag_venda_lista_array_filtros">
        <item>Situação</item>
        <item>Vendedor</item>
        <item>Periodo</item>
    </string-array>
    <string-array name="frag_venda_lista_array_situacoes">
        <item>Aberta</item>
        <item>Finalizada</item>
    </string-array>
    <!--</editor-fold>-->

    <!--Activity Venda-->
    <string name="activity_venda_label">Venda</string>
    <string name="activity_venda_title_nova_venda">Venda</string>

    <!--<editor-fold desc="Fragment Cadastro de Venda">-->
    <string name="barra">/</string>
    <string name="fragment_cadastro_venda_label_data">Data da venda:</string>
    <string name="fragment_cadastro_venda_hint_dia">dia</string>
    <string name="fragment_cadastro_venda_hint_mes">mês</string>
    <string name="fragment_cadastro_venda_hint_ano">ano</string>
    <string name="fragment_cadastro_venda_botao_hoje">Hoje</string>
    <string name="fragment_cadastro_venda_selecione_vendedor">Selecione um vendedor</string>
    <string name="fragment_cadastro_venda_label_levou">Levou</string>
    <string name="fragment_cadastro_venda_label_voltou">Voltou</string>
    <string name="fragment_cadastro_venda_label_vendeu">Vendeu</string>
    <string name="fragment_cadastro_venda_label_total">Total</string>
    <string name="fragment_cadastro_venda_label_sigla">WWW</string>
    <string name="fragment_cadastro_venda_label_salvar">Salvar</string>
    <string name="fragment_cadastro_venda_label_finalizar">Finalizar</string>
    <string name="fragment_cadastro_venda_label_excluir">Excluir venda</string>
    <!--</editor-fold>-->

    <!--<editor-fold desc="Fragment Relatórios">-->
    <string name="frag_relatorios_vendas">Vendas</string>
    <string name="frag_relatorios_produtos">Produtos</string>
    <string name="frag_relatorios_vendedores">Vendedores</string>
    <string name="fragment_relatorios_carregando">Carregando relatório…</string>
    <string name="fragment_relatorios_venda_vazio">Nenhum venda encontrada</string>
    <!--</editor-fold>-->

    <!--<editor-fold desc="Fragment Relatório Vendas Por Dia">-->
    <string name="frag_relat_vendas_spinner_agrupamento_prompt">Agrupamento:</string>
    <string-array name="frag_relat_vendas_spinner_agrupamento">
        <item>Dia</item>
        <item>Mês</item>
    </string-array>

    <string name="frag_relat_vendas_spinner_periodo_prompt">Período:</string>
    <string-array name="frag_relat_vendas_spinner_periodo_dia">
        <item>Esta semana</item>
        <item>Últimos 15 dias</item>
        <item>Este mês</item>
        <!--<item>Personalizado</item>-->
    </string-array>

    <string-array name="frag_relat_vendas_spinner_periodo_mes">
        <item>Últimos seis meses</item>
        <item>Este ano</item>
        <!--<item>Personalizado</item>-->
    </string-array>
    <!--</editor-fold>-->

    <!--<editor-fold desc="Activity de Backup dos dados">-->
    <string name="activity_backup_label">Backup</string>
    <string name="activity_backup_exportar">Exportar backup</string>
    <string name="activity_backup_importar">Importar backup</string>
    <!--</editor-fold>-->
    <string name="loading_cancelar">Cancelar</string>
</resources>
