<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/activity_main_drawer_menu_inicio" />
        <item
            android:id="@+id/nav_vendas"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/activity_main_drawer_menu_vendas" />
        <item
            android:id="@+id/nav_produtos"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/activity_main_drawer_menu_produtos" />
        <item
            android:id="@+id/nav_vendedores"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/activity_main_drawer_menu_vendedores" />
    </group>

    <item android:title="@string/activity_main_drawer_menu_aplicativo">
        <menu>
            <item
                android:id="@+id/nav_atualizar"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/activity_main_drawer_menu_atualizar" />
            <item
                android:id="@+id/nav_backup"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/activity_main_drawer_menu_backup" />
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/activity_main_drawer_menu_sobre" />
        </menu>
    </item>

</menu>
