<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="tk.andrielson.carrinhos.androidapp.ui.fragment.RelatorioVendasPorDiaFragment"
    tools:context="tk.andrielson.carrinhos.androidapp.ui.fragment.RelatorioVendasPorDiaFragment">

    <data>

        <variable
            name="carregando"
            type="boolean" />

        <variable
            name="listaVazia"
            type="boolean" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_agrupamento"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:prompt="@string/frag_relat_vendas_spinner_agrupamento_prompt"
                android:spinnerMode="dropdown"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_periodo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:prompt="@string/frag_relat_vendas_spinner_periodo_prompt"
                android:spinnerMode="dropdown"
                android:textSize="20sp"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

        <TextView
            android:id="@+id/loading_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/fragment_relatorios_carregando"
            android:textAlignment="center"
            android:visibility="@{carregando ? View.VISIBLE : View.GONE}"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/empty_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/fragment_relatorios_venda_vazio"
            android:textAlignment="center"
            android:visibility="@{listaVazia ? View.VISIBLE : View.GONE}"
            tools:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/fragment_relatorio_vendas_por_dia_item"
            tools:visibility="visible" />
    </LinearLayout>
</layout>