<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="tk.andrielson.carrinhos.androidapp.ui.fragment.CadastroProdutoFragment"
    tools:locale="pt-BR">

    <data>

        <variable
            name="produto"
            type="tk.andrielson.carrinhos.androidapp.data.model.Produto" />

        <variable
            name="handler"
            type="tk.andrielson.carrinhos.androidapp.ui.viewhandler.CadastroProdutoHandler" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_cadastro_produto_input_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_cadastro_produto_label_nome"
                android:imeOptions="actionNext"
                android:inputType="textCapCharacters"
                android:maxLength="20"
                android:text="@={produto.nome}"
                tools:text="Produto baum" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_sigla"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_nome"
            app:hintTextAppearance="@style/HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_cadastro_produto_input_sigla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_cadastro_produto_label_sigla"
                android:imeOptions="actionNext"
                android:inputType="textCapCharacters"
                android:maxLength="3"
                android:text="@={produto.sigla}"
                tools:text="PBA" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_preco"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_nome"
            android:layout_toEndOf="@id/input_sigla"
            app:hintTextAppearance="@style/HintText">

            <tk.andrielson.carrinhos.androidapp.textinputmoeda.CurrencyTextInputEditText
                android:id="@+id/fragment_cadastro_produto_input_preco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_cadastro_produto_label_preco"
                android:maxLength="27"
                app:valorReal="@={produto.preco}"
                tools:text="10" />

        </android.support.design.widget.TextInputLayout>

        <Switch
            android:id="@+id/switch_ativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={produto.ativo}"
            android:text="@string/fragment_cadastro_produto_label_habilitado"
            android:textSize="20sp" />

        <Button
            android:id="@+id/fragment_cadastro_produto_botao_salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/text_margin"
            android:background="@color/colorPrimaryDark"
            android:onClick="@{(view) -> handler.onBotaoSalvarClick(view, produto)}"
            android:padding="10dp"
            android:text="@string/fragment_cadastro_produto_label_botao_salvar"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </RelativeLayout>

</layout>