<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="tk.andrielson.carrinhos.androidapp.ui.fragment.RelatoriosFragment">

    <data>

        <variable
            name="listener"
            type="tk.andrielson.carrinhos.androidapp.ui.fragment.RelatoriosFragment.OnFragmentInteractionListener" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/text_margin">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:onClick="@{() -> listener.onClickVendas()}"
                android:text="@string/frag_relatorios_vendas"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:background="@color/colorAccent"
                android:onClick="@{() -> listener.onClickProdutos()}"
                android:text="@string/frag_relatorios_produtos"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:background="@color/colorAccent"
                android:onClick="@{() -> listener.onClickVendedores()}"
                android:text="@string/frag_relatorios_vendedores"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>