<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="tk.andrielson.carrinhos.androidapp.ui.fragment.CadastroVendedorFragment"
    tools:locale="pt-BR">

    <data>

        <variable
            name="vendedor"
            type="tk.andrielson.carrinhos.androidapp.observable.VendedorObservable" />

        <variable
            name="handler"
            type="tk.andrielson.carrinhos.androidapp.ui.viewhandler.CadastroVendedorHandler" />

        <import type="android.view.View" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/coordinator_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:hintTextAppearance="@style/HintText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_nome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fragment_cadastro_vendedor_label_nome"
                        android:imeOptions="actionNext"
                        android:inputType="textCapCharacters"
                        android:maxLength="48"
                        android:text="@={vendedor.nome}"
                        tools:text="TEXEIRA" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:hintTextAppearance="@style/HintText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_comissao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fragment_cadastro_vendedor_label_comissao"
                        android:imeOptions="actionDone"
                        android:inputType="numberPassword"
                        android:maxLength="2"
                        android:text="@={vendedor.comissao}"
                        tools:text="80" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_margin"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/fragment_cadastro_vendedor_label_habilitado"
                        android:src="@drawable/ic_remove_shopping_cart_black_32dp"
                        android:tint="@color/carrinhoDesabilitado" />

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:checked="@={vendedor.ativo}" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/fragment_cadastro_vendedor_label_desabilitado"
                        android:src="@drawable/ic_shopping_cart_black_32dp"
                        android:tint="@color/carrinhoHabilitado" />
                </LinearLayout>

                <Button
                    android:id="@+id/fragment_cadastro_vendedor_botao_salvar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="32dp"
                    android:background="@color/colorPrimaryDark"
                    android:onClick="@{() -> handler.onBotaoSalvarClick(vendedor)}"
                    android:padding="10dp"
                    android:text="@string/fragment_cadastro_vendedor_label_botao_salvar"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="32dp"
                    android:onClick="@{() -> handler.onBotaoExcluirClick(vendedor)}"
                    android:padding="8dp"
                    android:text="@string/fragment_cadastro_vendedor_label_botao_excluir"
                    android:textAllCaps="true"
                    android:textColor="#FF0000"
                    android:visibility="@{vendedor.ehNovo() ? View.GONE : View.VISIBLE}" />
            </LinearLayout>
        </android.support.design.widget.CoordinatorLayout>
    </ScrollView>
</layout>